| Summary: | ASTERISK-22552: Need log messages - res_pjsip_endpoint_identifier_user.so fails to find an endpoint match on inbound REGISTER | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2013-09-18 13:47:12 | Date Closed: | 2013-10-25 12:39:01 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_endpoint_identifier_ip Resources/res_pjsip_endpoint_identifier_user |
| Versions: | SVN | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | SVN-branch-12-r399268 | Attachments: | |
| Description: | res_pjsip_endpoint_identifier_ip lets us know when it fails to find a match
{noformat} [Sep 18 13:10:46] DEBUG[24573]: res_pjsip_endpoint_identifier_ip.c:134 ip_identify: '10.24.18.138:5060' did not match any identify section rules {noformat} We need a similar DEBUG message for res_pjsip_endpoint_identifier_user ( I didn't see anything in logging) when it fails to find a match. It may also make sense to have a WARNING or a higher level VERBOSE (maybe 3) that alerts when an inbound REGISTER has no match. That is something an admin will want to know about, without having to first look into SIP debug. I was testing with a REGISTER and saw this, but I'd presume this applies to INVITEs and other inbound traffic as well. | ||
| Comments: | |||